chore: 改为发布到官方npm源

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "bin",
     "dist"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "build": "nr gen && tsdown --clean --dts",
     "stub": "tsdown",
