--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,7 @@ strict-peer-dependencies=false
 shamefully-hoist=true
 ignore-workspace-root-check=true
 shell-emulator=true
+
+# 发布到官方npm仓库
+registry=https://registry.npmjs.org/
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
