--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mlong/eslint-config",
+  "name": "@along_age/eslint-config",
   "type": "module",
   "version": "5.1.3",
   "packageManager": "pnpm@10.13.1",
